@@ -1,6 +1,7 @@
 sunuo (0.4.4) unstable; urgency=low
 
   * wake up TimerThread during shutdown
+  * run.sh: kill SunUO process on exit
 
  --
 
